--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"type": "module",
 	"private": true,
 	"scripts": {
-		"dev": "bun run --hot src/index.ts",
+		"dev": "bun run --watch src/index.ts",
 		"format": "biome format --write ."
 	},
 	"devDependencies": {
@@ -16,6 +16,7 @@
 	},
 	"dependencies": {
 		"elysia": "^1.4.15",
+		"sharp": "^0.34.5",
 		"valibot": "^1.1.0"
 	}
 }
