--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,23 @@
 {
 	"compilerOptions": {
-		// Environment setup & latest features
-		"lib": ["ESNext"],
-		"target": "ESNext",
-		"module": "ESNext",
+		"allowJs": false,
+		"baseUrl": "src",
+		"esModuleInterop": true,
+		"isolatedModules": true,
+		"lib": ["es2022"],
+		"module": "preserve",
 		"moduleDetection": "force",
-		"jsx": "react-jsx",
-		"allowJs": true,
-
-		// Bundler mode
-		"moduleResolution": "bundler",
-		"allowImportingTsExtensions": true,
-		"verbatimModuleSyntax": true,
 		"noEmit": true,
-
-		// Best practices
-		"strict": true,
-		"skipLibCheck": true,
-		"noFallthroughCasesInSwitch": true,
+		"noImplicitOverride": true,
 		"noUncheckedIndexedAccess": true,
-
-		// Some stricter flags (disabled by default)
-		"noUnusedLocals": false,
-		"noUnusedParameters": false,
-		"noPropertyAccessFromIndexSignature": false,
-
-		// Aliases
-		"baseUrl": ".",
 		"paths": {
-			"~/*": ["./src/*"]
-		}
+			"~/*": ["./*"]
+		},
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"strict": true,
+		"target": "es2022",
+		"verbatimModuleSyntax": true,
+		"noErrorTruncation": true
 	}
 }
