--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
 	"type": "module",
 	"private": true,
 	"scripts": {
+		"build": "bun build --compile --minify --target=bun --outfile ./dist/exe ./src/index.ts",
 		"dev": "bun run --watch src/index.ts",
 		"format": "biome format --write ."
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.2",
-		"@types/bun": "latest"
-	},
-	"peerDependencies": {
-		"typescript": "^5"
+		"@types/bun": "latest",
+		"typescript": "^5.9.3"
 	},
 	"dependencies": {
 		"elysia": "^1.4.15",
