--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
 	"type": "module",
 	"private": true,
 	"scripts": {
-		"build-exe": "bun build --compile --minify --target=bun --outfile ./dist/exe ./src/index.ts",
-		"build-js": "bun build --minify --target=bun --outdir ./dist ./src/index.ts",
+		"build": "bun build --minify --target=bun --outdir ./dist ./src/index.ts",
 		"dev": "bun run --watch src/index.ts",
 		"format": "biome format --write ."
 	},
