--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
 		"typescript": "^5.9.3"
 	},
 	"dependencies": {
+		"@elysiajs/openapi": "^1.4.11",
+		"@valibot/to-json-schema": "^1.3.0",
 		"elysia": "^1.4.15",
 		"sharp": "^0.34.5",
 		"valibot": "^1.1.0"
